# AntennaPatternViewer

./: .gitignore  INSTALL.md  MANIFEST.ini  README.md  pyproject.toml  setup.cfg  setup.py  test_boresight_fix.py
.claude/: settings.local.json
src/antenna_pattern_viewer/: __init__.py  antenna_pattern_widget.py  data_model.py  main.py  pattern_instance.py  plotting.py
src/antenna_pattern_viewer/dialogs/: __init__.py  nearfield_viewer.py
src/antenna_pattern_viewer/widgets/: __init__.py  analysis_panel.py  analysis_tab.py  collapsible_group.py  control_panel_widget.py  data_display_widget.py  export_widget.py  file_manager_widget.py  icon_sidebar.py  left_panel_widget.py  pattern_list_widget.py  pattern_strip.py  plot_2d_widget.py  plot_3d_widget.py  plot_nearfield_widget.py  plot_widget.py  processing_panel.py  processing_tab.py  view_panel.py  view_tab.py
src/antenna_pattern_viewer/workers/: __init__.py  swe_worker.py
