[metadata]
name = antenna-pattern-viewer
version = 1.0.0
author = Justin Long
author_email = justinwlong1@gmail.com
description = GUI application for visualizing antenna far-field patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/antenna-pattern-viewer
project_urls =
    Bug Tracker = https://github.com/yourusername/antenna-pattern-viewer/issues
    Documentation = https://antenna-pattern-viewer.readthedocs.io
    Source Code = https://github.com/yourusername/antenna-pattern-viewer
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    farfield-spherical>=1.0.0
    PyQt6>=6.4.0
    matplotlib>=3.5.0
    numpy>=1.21.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-qt>=4.0.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0

[options.entry_points]
console_scripts =
    antenna-pattern-viewer = antenna_pattern_viewer.__main__:main
gui_scripts =
    antenna-pattern-viewer-gui = antenna_pattern_viewer.__main__:main

# Flake8 configuration
[flake8]
max-line-length = 100
extend-ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv

# Coverage configuration
[coverage:run]
source = antenna_pattern_viewer
omit =
    */tests/*
    */test_*.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

# pytest configuration
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers

# mypy configuration  
[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[mypy-PyQt6.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-farfield_spherical.*]
ignore_missing_imports = True